@@ -58,7 +58,7 @@ Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.133290
 Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::CheckSelfDependency = 0
 Dist::Zilla::Plugin::Run::AfterBuild = 0
-Dist::Zilla::Plugin::RunExtraTests = 0
+Dist::Zilla::Plugin::RunExtraTests = 0.019
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts = 0.008
 Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.004
