@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - pass default_jobs => 9 option to all installer tools in use
 
 0.053     2014-03-12 15:01:19Z
           - now using [Test::CleanNamespaces] to build this distribution as
